test/invalid/missing_soa.zone
example.com. 3600 IN NS ns1.example.com.
example.com. 3600 IN A 192.0.2.1
